--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -74,6 +74,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/photo_item_image_like"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/photo_item_layout_action_icon_padding"
@@ -98,6 +99,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/photo_item_image_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/photo_item_layout_action_icon_padding"
@@ -122,6 +124,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/photo_item_image_share"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/photo_item_layout_action_icon_share_padding"
