--- a/app/src/main/res/layout/content_love.xml
+++ b/app/src/main/res/layout/content_love.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".view.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleView_love"
