--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -8,141 +8,236 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/photo_item_header_height"
+        android:padding="@dimen/photo_item_header_padding">
 
         <ImageView
-            android:id="@+id/photo_item_image_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/image_demo" />
-
-        <TextView
-            android:id="@+id/photo_item_text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/photo_item_text_title_margin"
-            android:shadowColor="@android:color/darker_gray"
-            android:shadowDx="-2"
-            android:shadowDy="-1"
-            android:shadowRadius="1"
-            android:text="@string/app_name"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/photo_item_text_title_size" />
-
-        <ImageView
-            android:id="@+id/photo_item_image_love"
+            android:id="@+id/photo_item_header_image_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/photo_item_image_love_padding"
-            android:src="@drawable/ic_photo_love" />
+            android:src="@drawable/ic_bar_me" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/photo_item_image_view_margin"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/photo_item_image_view_height"
-                android:src="@drawable/ic_photo_view" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/photo_item_header_image_love"
+            android:layout_toRightOf="@+id/photo_item_header_image_avatar"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/photo_item_text_view_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:shadowColor="@android:color/white"
-                android:shadowDx="-1"
-                android:shadowDy="-1"
-                android:shadowRadius="1"
-                android:text="@integer/init_view" />
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:text="@string/user"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/photo_item_header_item_padding"
+                    android:text="@string/time" />
+
+                <TextView
+                    android:id="@+id/photo_item_header_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/photo_item_header_views"
+                    android:padding="@dimen/photo_item_header_item_padding"
+                    android:text="@string/init_count" />
+
+                <TextView
+                    android:id="@+id/photo_item_header_views"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:padding="@dimen/photo_item_header_item_padding"
+                    android:text="@string/views" />
+            </RelativeLayout>
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/photo_item_header_image_love"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_header_love" />
+
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/photo_item_body_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/photo_item_body_title_padding"
+        android:text="@string/status" />
+
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <ImageView
+        android:id="@+id/photo_item_body_image_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_body_load" />
+
+    <!--<TextView-->
+    <!--android:id="@+id/photo_item_text_title"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:padding="@dimen/photo_item_text_title_margin"-->
+    <!--android:shadowColor="@android:color/darker_gray"-->
+    <!--android:shadowDx="-2"-->
+    <!--android:shadowDy="-1"-->
+    <!--android:shadowRadius="1"-->
+    <!--android:text="@string/app_name"-->
+    <!--android:textColor="@android:color/white"-->
+    <!--android:textSize="@dimen/photo_item_text_title_size" />-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/photo_item_image_love"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:padding="@dimen/photo_item_image_love_padding"-->
+    <!--android:src="@drawable/ic_header_love" />-->
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_margin="@dimen/photo_item_image_view_margin"-->
+    <!--android:gravity="center">-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="@dimen/photo_item_image_view_height"-->
+    <!--android:src="@drawable/ic_photo_view" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/photo_item_body_text_view_total"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:shadowColor="@android:color/white"-->
+    <!--android:shadowDx="-1"-->
+    <!--android:shadowDy="-1"-->
+    <!--android:shadowRadius="1"-->
+    <!--android:text="@integer/init_view" />-->
+
+    <!--</LinearLayout>-->
+
+    <!--</RelativeLayout>-->
 
     <LinearLayout
         android:id="@+id/layout_action"
         android:layout_width="match_parent"
         android:layout_height="@dimen/photo_item_layout_action_height"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/photo_item_footer_padding">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="33"
+            android:layout_weight="25"
             android:gravity="center"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/photo_item_image_like"
+                android:id="@+id/photo_item_footer_image_like"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/photo_item_layout_action_icon_padding"
-                android:paddingTop="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_post_like" />
+                android:padding="@dimen/photo_item_layout_action_icon_padding"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_footer_like" />
 
             <TextView
-                android:id="@+id/photo_item_text_like_total"
+                android:id="@+id/photo_item_footer_text_like_total"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@string/init_view" />
+                android:text="@string/init_count" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="33"
+            android:layout_weight="25"
             android:gravity="center"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/photo_item_image_comment"
+                android:id="@+id/photo_item_footer_image_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/photo_item_layout_action_icon_padding"
-                android:paddingTop="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_post_comment" />
+                android:padding="@dimen/photo_item_layout_action_icon_padding"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_footer_comment" />
 
             <TextView
-                android:id="@+id/photo_item_text_comment_total"
+                android:id="@+id/photo_item_footer_text_comment_total"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@string/init_view" />
+                android:text="@string/init_count" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="33"
+            android:layout_weight="25"
             android:gravity="center"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/photo_item_image_share"
+                android:id="@+id/photo_item_footer_image_share"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/photo_item_layout_action_icon_share_padding"
-                android:paddingTop="@dimen/photo_item_layout_action_icon_share_padding"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_post_share" />
+                android:padding="@dimen/photo_item_layout_action_icon_padding"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_footer_share" />
 
             <TextView
-                android:id="@+id/photo_item_text_share_total"
+                android:id="@+id/photo_item_footer_text_share_total"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@string/init_view" />
+                android:text="@string/init_count" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/photo_item_footer_image_download"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="@dimen/photo_item_layout_action_icon_padding"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_footer_download" />
+
+            <TextView
+                android:id="@+id/photo_item_footer_text_download_total"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/init_count" />
 
         </LinearLayout>
 
