--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,15 +13,22 @@
 
     <dimen name="photo_item_image_view_height">32dp</dimen>
     <dimen name="photo_item_image_view_margin">8dp</dimen>
-    <dimen name="photo_item_layout_action_height">40dp</dimen>
+    <dimen name="photo_item_layout_action_height">50dp</dimen>
 
 
-    <dimen name="photo_item_layout_action_icon_padding">6dp</dimen>
-    <dimen name="photo_item_layout_action_icon_share_padding">4dp</dimen>
+    <dimen name="photo_item_layout_action_icon_padding">8dp</dimen>
 
     <dimen name="staggered_margin">4dp</dimen>
 
 
     <dimen name="photo_item_text_title_background_height">40dp</dimen>
     <dimen name="photo_item_text_title_size">20sp</dimen>
+
+    <dimen name="photo_item_view_divider">0.5dp</dimen>
+    <dimen name="photo_item_header_height">50dp</dimen>
+    <dimen name="photo_item_header_padding">4dp</dimen>
+    <dimen name="photo_item_header_item_padding">2dp</dimen>
+
+    <dimen name="photo_item_body_title_padding">8dp</dimen>
+    <dimen name="photo_item_footer_padding">4dp</dimen>
 </resources>
