--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorBarHome">#5169a7</color>
     <color name="colorBarLove">#eb4457</color>
     <color name="colorBarMe">#6f00ff</color>
+    <color name="colorCover">#262626</color>
+
 
 
 </resources>
