--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -148,31 +148,36 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="25"
+            android:layout_weight="28"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/photo_item_footer_image_like"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_footer_like" />
+            <!--<ImageView-->
+                <!--android:id="@+id/photo_item_footer_image_like"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:padding="@dimen/photo_item_layout_action_icon_padding"-->
+                <!--android:scaleType="centerInside"-->
+                <!--android:src="@drawable/ic_footer_like" />-->
 
-            <TextView
-                android:id="@+id/photo_item_footer_text_like_total"
+            <!--<TextView-->
+                <!--android:id="@+id/photo_item_footer_text_like_total"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:text="@string/init_count" />-->
+
+            <com.facebook.share.widget.LikeView
+                android:id="@+id/fb_like_button"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/init_count" />
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="25"
+            android:layout_weight="28"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -184,43 +189,48 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_footer_comment" />
 
-            <TextView
-                android:id="@+id/photo_item_footer_text_comment_total"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/init_count" />
+            <!--<TextView-->
+                <!--android:id="@+id/photo_item_footer_text_comment_total"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:text="@string/init_count" />-->
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="25"
+            android:layout_weight="28"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/photo_item_footer_image_share"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_footer_share" />
+            <!--<ImageView-->
+                <!--android:id="@+id/photo_item_footer_image_share"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:padding="@dimen/photo_item_layout_action_icon_padding"-->
+                <!--android:scaleType="centerInside"-->
+                <!--android:src="@drawable/ic_footer_share" />-->
 
-            <TextView
-                android:id="@+id/photo_item_footer_text_share_total"
+            <!--<TextView-->
+                <!--android:id="@+id/photo_item_footer_text_share_total"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:text="@string/init_count" />-->
+
+            <com.facebook.share.widget.ShareButton
+                android:id="@+id/fb_share_button"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/init_count" />
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="25"
+            android:layout_weight="16"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -232,12 +242,13 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_footer_download" />
 
-            <TextView
-                android:id="@+id/photo_item_footer_text_download_total"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/init_count" />
+            <!--<TextView-->
+                <!--android:id="@+id/photo_item_footer_text_download_total"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:text="@string/init_count" />-->
+
 
         </LinearLayout>
 
