--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,7 +16,7 @@
     <dimen name="photo_item_layout_action_height">50dp</dimen>
 
 
-    <dimen name="photo_item_layout_action_icon_padding">8dp</dimen>
+    <dimen name="photo_item_layout_action_icon_padding">6dp</dimen>
 
     <dimen name="staggered_margin">4dp</dimen>
 
@@ -31,4 +31,10 @@
 
     <dimen name="photo_item_body_title_padding">8dp</dimen>
     <dimen name="photo_item_footer_padding">4dp</dimen>
+
+    <dimen name="me_cover_heigh">200dp</dimen>
+    <dimen name="me_cover_image_border">2dp</dimen>
+    <dimen name="me_cover_text_size">16sp</dimen>
+    <dimen name="me_cover_text_margin">8dp</dimen>
+
 </resources>
