--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -11,11 +11,15 @@
         android:layout_height="@dimen/photo_item_header_height"
         android:padding="@dimen/photo_item_header_padding">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/photo_item_header_image_avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_bar_me" />
+            android:layout_width="@dimen/photo_item_header_height"
+            android:layout_height="@dimen/photo_item_header_height"
+            android:src="@drawable/ic_bar_me"
+            app:civ_border_width="@dimen/photo_item_header_avatar_border"
+            app:civ_border_color="@android:color/holo_blue_dark"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,6 +30,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/photo_item_header_text_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
@@ -37,12 +42,14 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/photo_item_header_item_padding"
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/photo_item_header_text_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/photo_item_header_item_padding"
+                    android:textSize="12sp"
                     android:text="@string/time" />
 
                 <TextView
@@ -50,7 +57,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/photo_item_header_views"
-                    android:padding="@dimen/photo_item_header_item_padding"
                     android:text="@string/init_count" />
 
                 <TextView
@@ -58,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:padding="@dimen/photo_item_header_item_padding"
+
                     android:text="@string/views" />
             </RelativeLayout>
         </LinearLayout>
@@ -79,63 +85,12 @@
         android:padding="@dimen/photo_item_body_title_padding"
         android:text="@string/status" />
 
-    <!--<RelativeLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
 
     <ImageView
         android:id="@+id/photo_item_body_image_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_body_load" />
-
-    <!--<TextView-->
-    <!--android:id="@+id/photo_item_text_title"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:padding="@dimen/photo_item_text_title_margin"-->
-    <!--android:shadowColor="@android:color/darker_gray"-->
-    <!--android:shadowDx="-2"-->
-    <!--android:shadowDy="-1"-->
-    <!--android:shadowRadius="1"-->
-    <!--android:text="@string/app_name"-->
-    <!--android:textColor="@android:color/white"-->
-    <!--android:textSize="@dimen/photo_item_text_title_size" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/photo_item_image_love"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:padding="@dimen/photo_item_image_love_padding"-->
-    <!--android:src="@drawable/ic_header_love" />-->
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_margin="@dimen/photo_item_image_view_margin"-->
-    <!--android:gravity="center">-->
-
-    <!--<ImageView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="@dimen/photo_item_image_view_height"-->
-    <!--android:src="@drawable/ic_photo_view" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/photo_item_body_text_view_total"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:shadowColor="@android:color/white"-->
-    <!--android:shadowDx="-1"-->
-    <!--android:shadowDy="-1"-->
-    <!--android:shadowRadius="1"-->
-    <!--android:text="@integer/init_view" />-->
-
-    <!--</LinearLayout>-->
-
-    <!--</RelativeLayout>-->
 
     <LinearLayout
         android:id="@+id/layout_action"
@@ -152,25 +107,10 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <!--<ImageView-->
-                <!--android:id="@+id/photo_item_footer_image_like"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:padding="@dimen/photo_item_layout_action_icon_padding"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/ic_footer_like" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/photo_item_footer_text_like_total"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="center"-->
-                <!--android:text="@string/init_count" />-->
-
             <com.facebook.share.widget.LikeView
                 android:id="@+id/fb_like_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
@@ -189,13 +129,6 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_footer_comment" />
 
-            <!--<TextView-->
-                <!--android:id="@+id/photo_item_footer_text_comment_total"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="center"-->
-                <!--android:text="@string/init_count" />-->
-
         </LinearLayout>
 
         <LinearLayout
@@ -205,25 +138,10 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <!--<ImageView-->
-                <!--android:id="@+id/photo_item_footer_image_share"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:padding="@dimen/photo_item_layout_action_icon_padding"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/ic_footer_share" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/photo_item_footer_text_share_total"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="center"-->
-                <!--android:text="@string/init_count" />-->
-
             <com.facebook.share.widget.ShareButton
                 android:id="@+id/fb_share_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
@@ -241,14 +159,6 @@
                 android:padding="@dimen/photo_item_layout_action_icon_padding"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_footer_download" />
-
-            <!--<TextView-->
-                <!--android:id="@+id/photo_item_footer_text_download_total"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="center"-->
-                <!--android:text="@string/init_count" />-->
-
 
         </LinearLayout>
 
