--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,6 +28,7 @@
     <dimen name="photo_item_header_height">50dp</dimen>
     <dimen name="photo_item_header_padding">4dp</dimen>
     <dimen name="photo_item_header_item_padding">2dp</dimen>
+    <dimen name="photo_item_header_avatar_border">1dp</dimen>
 
     <dimen name="photo_item_body_title_padding">8dp</dimen>
     <dimen name="photo_item_footer_padding">4dp</dimen>
