--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="photo_item_view_divider">0.5dp</dimen>
     <dimen name="photo_item_header_height">50dp</dimen>
     <dimen name="photo_item_header_padding">4dp</dimen>
+    <dimen name="photo_item_header_view_margin">4dp</dimen>
     <dimen name="photo_item_header_item_padding">2dp</dimen>
     <dimen name="photo_item_header_avatar_border">1dp</dimen>
 
