--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -15,7 +15,7 @@
             android:id="@+id/photo_item_header_image_avatar"
             android:layout_width="@dimen/photo_item_header_height"
             android:layout_height="@dimen/photo_item_header_height"
-            android:src="@drawable/ic_bar_me"/>
+            android:src="@drawable/ic_bar_me" />
 
 
         <LinearLayout
@@ -46,8 +46,8 @@
                     android:id="@+id/photo_item_header_text_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:text="@string/time" />
+                    android:text="@string/time"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/photo_item_header_text_view"
@@ -72,7 +72,7 @@
             android:layout_width="@dimen/photo_item_header_height"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_header_love" />
+            android:src="@drawable/ic_header_remove" />
 
     </RelativeLayout>
 
@@ -90,76 +90,95 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_body_load" />
 
-    <LinearLayout
-        android:id="@+id/layout_action"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/photo_item_layout_action_height"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:padding="@dimen/photo_item_footer_padding">
+        android:layout_height="@dimen/photo_item_layout_action_height">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/layout_action"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="28"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:padding="@dimen/photo_item_footer_padding">
 
-            <com.facebook.share.widget.LikeView
-                android:id="@+id/fb_like_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="28"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/photo_item_footer_image_comment"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:padding="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_footer_comment" />
+                android:layout_weight="28"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <com.facebook.share.widget.LikeView
+                    android:id="@+id/fb_like_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="28"
-            android:gravity="center"
-            android:orientation="horizontal">
+            </LinearLayout>
 
-            <com.facebook.share.widget.ShareButton
-                android:id="@+id/fb_share_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="16"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/photo_item_footer_image_download"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:padding="@dimen/photo_item_layout_action_icon_padding"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_footer_download" />
+                android:layout_weight="28"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/photo_item_footer_image_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/photo_item_layout_action_icon_padding"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_footer_comment" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="28"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.facebook.share.widget.ShareButton
+                    android:id="@+id/fb_share_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="16"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/photo_item_footer_image_download"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/photo_item_layout_action_icon_padding"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_footer_download" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/photo_item_footer_button_login"
+            android:layout_margin="@dimen/photo_item_footer_login_margin"
+            android:padding="@dimen/photo_item_footer_login_margin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableLeft="@drawable/ic_logo_facebook_48"
+            android:background="@color/colorBarHome"
+            android:textColor="@android:color/white"
+            android:visibility="visible"
+            android:text="@string/require_login_home"/>
+
+
+    </RelativeLayout>
 
 </LinearLayout>
