--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,6 @@
     <dimen name="me_cover_text_size">16sp</dimen>
     <dimen name="me_cover_text_margin">8dp</dimen>
 
+    <dimen name="love_text_no_photo_is_loved">24sp</dimen>
+
 </resources>
