Complete Home & Love

--- a/app/src/main/res/layout/content_love.xml
+++ b/app/src/main/res/layout/content_love.xml
@@ -22,26 +22,34 @@
             android:layout_marginRight="@dimen/photo_item_margin_left" />
     </com.baoyz.widget.PullRefreshLayout>
 
-    <Button
-        android:id="@+id/love_button_login"
+    <LinearLayout
+        android:id="@+id/love_linear_login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="@dimen/photo_item_footer_login_margin"
-        android:background="@color/colorBarHome"
-        android:drawableLeft="@drawable/ic_logo_facebook_64"
-        android:text="@string/require_login_love"
-        android:textColor="@android:color/white"
-        android:visibility="gone" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:padding="@dimen/love_layout_padding"
+        android:gravity="center"
+        android:visibility="visible">
+
+        <Button
+            android:id="@+id/love_button_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorBarHome"
+            android:drawableLeft="@drawable/ic_logo_facebook_64"
+            android:text="@string/require_login_love"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/love_text_no_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:visibility="gone"
-        android:textSize="@dimen/love_text_no_photo_is_loved"
         android:background="@android:color/white"
-        android:text="@string/no_photo_is_loved" />
+        android:gravity="center"
+        android:text="@string/no_photo_is_loved"
+        android:textSize="@dimen/love_text_no_photo_is_loved"
+        android:visibility="gone" />
 
 </RelativeLayout>
