--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="photo_list_padding">0dp</dimen>
+
     <dimen name="photo_item_margin_left">0dp</dimen>
     <dimen name="photo_item_margin_top">8dp</dimen>
 
