--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,15 +10,17 @@
     <dimen name="photo_item_margin_top">8dp</dimen>
 
     <dimen name="photo_item_text_title_margin">8dp</dimen>
-    <dimen name="photo_item_image_love_margin">8dp</dimen>
-    <dimen name="photo_item_image_love_padding">8dp</dimen>
 
     <dimen name="photo_item_image_view_height">32dp</dimen>
     <dimen name="photo_item_image_view_margin">8dp</dimen>
-    <dimen name="photo_item_layout_action_height">50dp</dimen>
+    <dimen name="photo_item_layout_action_height">42dp</dimen>
+    <dimen name="photo_item_image_love_padding">4dp</dimen>
+    <dimen name="photo_item_text_user_padding">2dp</dimen>
+    <dimen name="photo_item_text_detail_padding">12sp</dimen>
 
 
-    <dimen name="photo_item_layout_action_icon_padding">6dp</dimen>
+
+    <dimen name="photo_item_layout_action_icon_padding">4dp</dimen>
 
     <dimen name="staggered_margin">4dp</dimen>
 
