--- a/app/src/main/res/layout/fragment_upload_tabs.xml
+++ b/app/src/main/res/layout/fragment_upload_tabs.xml
@@ -28,8 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/upload_float_margin"
         android:src="@android:drawable/ic_menu_upload"
-        android:background="@android:color/holo_purple"
-        android:layout_margin="@dimen/upload_float_margin" />
+        app:backgroundTint="@color/colorUploadButton" />
 
 </RelativeLayout>
