1. Add some module

--- a/app/src/main/res/values/message.xml
+++ b/app/src/main/res/values/message.xml
@@ -11,6 +11,7 @@
     <string name="network_info">Network Info</string>
     <string name="network_connect_no">Unable access internet, please check internet connection</string>
     <string name="network_connect_yes">Internet is connected</string>
+    <string name="please_select_photo_before">Please select photo before</string>
 
 
 </resources>
