Update for new structure 1. Holder 2. Adapter 3. Class 4. Other

--- a/app/src/main/res/layout/upload_review.xml
+++ b/app/src/main/res/layout/upload_review.xml
@@ -24,4 +24,14 @@
             android:layout_marginRight="@dimen/photo_item_view_margin_left" />
     </com.baoyz.widget.PullRefreshLayout>
 
+    <TextView
+        android:id="@+id/upload_text_no_photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="@string/no_photo_to_review"
+        android:textSize="@dimen/love_text_no_photo_is_loved"
+        android:visibility="gone" />
+
 </RelativeLayout>
